31-05-2005 <Qball> <Qball@qballcow.nl>
	* src/playlist3.c:		possibly Fixed bug in artist browser that
	caused artist "Eric Clapton" and album "Eric Clapton" didnt work.

28-05-2005 <Qball> <Qball@qballcow.nl>
	* glade/gmpc.glade:		Re-enabled key-bindings.

24-05-2005 <Qball> <Qball@qballcow.nl>
	* src/mpdinteraction.c:		set window title on connect/disconnect
	* src/libmpc.d:			Support for mpdSong call of the window
	* src/playlist3.c:		Support (mpd =0.12) for showing
	id3tags of db items
23-05-2005 <Qball> <Qball@qballcow.nl>
	* src/libmpdclient.[c|h]:	Installed version with qball "advanced
	search and list" functions
	* src/libmpd.[c|h]:		support for qball patch
	* src/plyalist3.c:		Genre browser partially implemented

17-05-2005 <Qball> <Qball@qballcow.nl>
	* src/libmpd.[c|h]:	Moved the struct MpdObj definition to the .c
	file and typedeffed it in the .h file.. using internall function from
	you're C code will now result in compile errors.
	* src/main.c:		Removed direct usage of MpdObj internals.
	* src/mpdinteraction.c:	Removed direct usage of MpdObj internals.
	* src/player.c:		'\n' in window title is now replaced by a dash
	'-'
15-05-2005 <Qball> <Qball@qballcow.nl>	
	* doc/libmpd.tex:	Documentation file for libmpd.. (type
	latex2html for nice manual)
	* src/player.c:		Remove breakline from window title
	* src/player.c:		Don't scroll on multiline title.
	* src/preferences.c:	removed some printf stuff.

08-05-2005 <Qball> <Qball@qballcow.nl>
	* po/fr.po:		updated translation.
	* src/libmpd.[c|h]:	playlist_Changed_function now accepts a
	parameter;
	* src/libmpd.c:		playlist_changed_pointer and error_pointer now
	initialized to NULL

04-05-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	If playlist get changed update total time.
	* src/playlist3.c:	You can now get id3 info of selected song in
	playlist search.
	* src/playlist3.c:	Right mouse menu playlist search
	* src/main.c:		Error disables autoconnect. (bug 0422)
	* src/main.c:		Changed stock icons for